# transitive-deps-bug

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  index.ts  npm.bzl  package.json  pnpm-lock.yaml  ts.bzl  tsconfig.json
